--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,10 +60,10 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 7.1.1
   google_fonts: 4.0.3
-  google_maps: 6.3.0
-  google_maps_flutter: 2.5.0
-  google_maps_flutter_platform_interface: 2.4.1
-  google_maps_flutter_web: 0.5.4+2
+  # google_maps: 6.3.0
+  # google_maps_flutter: 2.5.0
+  # google_maps_flutter_platform_interface: 2.4.1
+  # google_maps_flutter_web: 0.5.4+2
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
   google_sign_in_ios: 5.6.4
