--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.18.0
+  collection: ^1.17.2
 
   flutterflow_ui: ^0.2.0+1
   auto_size_text: 3.0.0
@@ -104,6 +104,9 @@ dependencies:
   flutter_slidable: ^3.1.0
   map_launcher: ^3.2.0
   camera: ^0.10.5+9
+  geolocator: ^11.0.0
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
