--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ dependencies:
   geolocator: ^11.0.0
   flutter_map: ^4.0.0
   latlong2: ^0.8.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
