--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.2
   permission_handler: ^11.3.1
+  image: ^4.1.7
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
