--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,6 +108,7 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.2
   permission_handler: ^11.3.1
+  flutter_local_notifications: ^17.1.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
