--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
   latlong2: ^0.8.2
   permission_handler: ^11.3.1
   image: ^4.1.7
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
