--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,8 @@ dependencies:
   permission_handler: ^11.3.1
   image: ^4.1.7
   firebase_storage: ^11.6.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^17.1.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
