--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   collection: ^1.17.2
-
+  
   flutterflow_ui: ^0.2.0+1
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
@@ -113,6 +113,7 @@ dependencies:
   firebase_storage: ^11.6.0
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.1.0
+  screenshot: ^2.3.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
