--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^17.1.0
   screenshot: ^2.3.0
+  googleapis_auth: ^1.4.1
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
